--- a/src/main/resources/cukes.properties
+++ b/src/main/resources/cukes.properties
@@ -4,6 +4,7 @@ windowMaximize=true
 
 #Application URL and User credentials for application
 baseUrl=http://localhost:8069/web/database/selector
+appsUrl=http://localhost:8069/web
 databaseName=odoo16e_autotests
 userNameSuperAdmin=admin
 userNameLocalAdmin=admin
