--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,16 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <selenium.version>4.5.3</selenium.version>
-        <log4j.version>2.19.0</log4j.version>
+        <selenium.version>4.8.1</selenium.version>
+        <log4j.version>2.20.0</log4j.version>
         <ashot.version>1.5.4</ashot.version>
-        <org.testng.version>7.6.1</org.testng.version>
+        <org.testng.version>7.7.0</org.testng.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <aspectj.version>1.9.9.1</aspectj.version>
+        <aspectj.version>1.9.19</aspectj.version>
         <allure.version>2.19.0</allure.version>
         <allure.maven.version>2.10.0</allure.maven.version>
         <allure.dir>allure-results</allure.dir>
         <allure.results.directory>${project.build.directory}/${allure.dir}</allure.results.directory>
-        <log4j.version>2.19.0</log4j.version>
         <slf4j.version>2.0.6</slf4j.version>
     </properties>
 
@@ -155,6 +154,17 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-transport -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport</artifactId>
+            <version>4.1.87.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-http-jdk-client</artifactId>
+            <version>${selenium.version}</version>
         </dependency>
     </dependencies>
 </project>
