--- a/src/main/resources/cukes.properties
+++ b/src/main/resources/cukes.properties
@@ -5,7 +5,7 @@ windowMaximize=true
 #Application URL and User credentials for application
 baseUrl=http://localhost:8069/web/database/selector
 appsUrl=http://localhost:8069/web
-databaseName=dev2
+databaseName=autotests_01
 userNameSuperAdmin=admin
 userNameLocalAdmin=admin
 password=admin
